--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,7 +7,7 @@
     <%= csp_meta_tag %>
 
     <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>   
-
+    <script src="app/assets/javascripts/application.js"></script>
     <%
 =begin%>
  <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %> 
@@ -19,8 +19,12 @@
   <body>
     <%= render "layouts/header" %>
     <div class="container">
+      <% flash.each do |message_type, message| %>
+        <%= content_tag(:div, message, class: "alert alert-#{message_type}") %>
+      <% end %>
       <%= yield %>
       <%= render 'layouts/footer' %>
     </div>
+     <%= render 'layouts/script' %>
   </body>
 </html>
