--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -1,3 +1,14 @@
 // Place all the styles related to the Users controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: https://sass-lang.com/
+
+/* forms */
+
+input, select {
+    border: 1px solid #bbb;
+    margin-bottom: 15px;
+  }
+  
+  input {
+    height: auto !important;
+  }
