--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,11 +1,30 @@
     <header class="navbar navbar-fixed-top navbar-inverse">
       <div class="container">
-        <%= link_to "sample app", '#', id: "logo" %>
+        <%= link_to "HRMS", root_path, id: "logo" %>
         <nav>
           <ul class="nav navbar-nav navbar-right">
-            <li><%= link_to "Home",   root_path %></li>
-            <li><%= link_to "Help",   help_path %></li>
-            <li><%= link_to "Log in", '#' %></li>
+            <li><%= link_to "Home", root_path %></li>
+            <li><%= link_to "Help", help_path %></li>
+              <% if logged_in? %>
+              <li><%= link_to "All users", users_path %></li>
+              <li class="dropdown">
+                <a href="#" onclick="loginLogout()" class="dropbtn">
+                  Account <b class="caret"></b>
+                </a>
+                <ul class="dropdown-menu" id="myDropdown" class="dropdown-content">
+                <li><%= link_to "Profile", user_path(current_user) %></li>
+                  <li><%= link_to "Settings", edit_user_path(current_user) %></li>
+                  <li class="divider"></li>
+                  <li>
+                    <%= form_tag(logout_path, method: :delete) do %>
+                      <div><%= submit_tag 'log out' %></div>
+                    <% end %>
+                  </li>
+                </ul>
+              </li>
+            <% else %>
+              <li><%= link_to "Log in", login_path %></li>
+            <% end %>
           </ul>
         </nav>
       </div>
