--- a/app/views/layouts/_script.html.erb
+++ b/app/views/layouts/_script.html.erb
@@ -1,6 +1,6 @@
 <script>
 
-// Click drop down
+// Click drop down in header
 function loginLogout() {
     document.getElementById("myDropdown").classList.toggle("show");
   }
@@ -18,8 +18,8 @@ function loginLogout() {
     }
   }
 
+// add form- control
   var element = document.getElementById("user_position");
   element.classList.add("form-control");
-
 
 </script>
