--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,7 +7,7 @@
     <%= csp_meta_tag %>
 
     <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>   
-    <script src="app/assets/javascripts/application.js"></script>
+    <script src="/assets/javascripts/application.js" type="text/javascript" ></script>
     <%
 =begin%>
  <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %> 
