--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -19,7 +19,7 @@
         <%= u.text_field :home_town, class: "form-control" %>
 
         <%= u.label :phone %>
-        <%= u.number_field :phone, class: "form-control" %>
+        <%= u.text_field :phone, class: "form-control" %>
 
         <%= u.label :date_birth %>
         <%= u.date_field :date_birth, class: "form-control" %>
