--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,4 +1,4 @@
-<% provide(:title, "Home") %>
+<% provide(:title, "HRMS") %>
 
 <div class="center jumbotron">
   <h1>Welcome to the Sample App</h1>
