--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,6 +1,5 @@
-<% provide(:title, 'Sign up') %>
+<% provide(:title, 'HRMS') %>
 
-<% provide(:title, 'Sign up') %>
 <h1>Sign up</h1>
 
 <%= render "users/form" %>
