--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -3,8 +3,8 @@
         <%= link_to "HRMS", root_path, id: "logo" %>
         <nav>
           <ul class="nav navbar-nav navbar-right">
-            <li><%= link_to "Home", root_path %></li>
-            <li><%= link_to "Help", help_path %></li>
+            <li><%= link_to "Home", departments_path %></li>
+            <li><%= link_to "New users", signup_path %></li>
               <% if logged_in? %>
               <li><%= link_to "All users", users_path %></li>
               <li class="dropdown">
