--- a/app/views/layouts/_script.html.erb
+++ b/app/views/layouts/_script.html.erb
@@ -22,4 +22,7 @@ function loginLogout() {
   var element = document.getElementById("user_position");
   element.classList.add("form-control");
 
+  var element2 = document.getElementById("user_department_id");
+  element2.classList.add("form-control");
+
 </script>
