--- a/app/views/users/_table.html.erb
+++ b/app/views/users/_table.html.erb
@@ -6,6 +6,7 @@
       <th scope="col">Name</th>
       <th scope="col">Email</th>
       <th scope="col">Phone</th>
+      <th scope="col">Department</th>
       <th scope="col">Action</th>
     </tr>
   </thead>
@@ -16,6 +17,7 @@
           <td><%= user.name %></td>
           <td><%= user.email %></td>
           <td><%= user.phone %></td>
+          <td><%= (Department.find(user.department_id)).name %></td>
           <td>
             <%= link_to "Update", edit_user_path(user.id) %>
           </td>
