--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,25 +1,14 @@
-<% provide(:title, 'All users') %>
+<% provide(:title, 'HRMS') %>
 
 <h1>All users</h1>
 
-
-<%
-=begin%>
- <form>
-        <select id="template-example">
-        <% @users.each do |u| %>
-        <option value="<%= u.id %>" data-favorite-color="<%= u.name %>"><%= u.name %></option>
-        <% end %>
-      </select>
-</form> 
-<%
-=end%>
-
-<%= will_paginate %> 
-
-<%= form_tag(users_path, method: :get) do %>
-  <%= text_field_tag :param %>
-  <%= submit_tag 'Search' %>
+<%= form_tag(users_path, method: :get, class:"input-group") do %>
+  <div class="form-outline">
+      <%= text_field_tag 'query', params[:query], class: 'form-control' %>
+  </div>
+  <%= submit_tag 'Search', class:"btn btn-primary" %>
 <% end %>
+
+    <%= will_paginate %> 
 
 <%= render "users/table" %>
