optimization code and fig bug

--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -29,3 +29,13 @@ input, select {
 .input-group input[type='submit']{
   float: left;
 }
+
+/* header user */
+
+.form-search{
+  bottom: -8px;
+}
+
+.nav-item:last-child{
+  float:right;
+}
