--- a/app/views/users/_detail.html.erb
+++ b/app/views/users/_detail.html.erb
@@ -45,7 +45,7 @@
         <div class="form-group row">
             <label for="staticEmail" class="col-sm-6 col-form-label">Status :</label>
             <div class="col-sm-6">
-                <%= @user.status ? "has left": "presence" %>
+                <%= @user.status ? "presence": "has left" %>
             </div>
         </div>
     </div>
