--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -4,9 +4,8 @@
         <nav>
           <ul class="nav navbar-nav navbar-right">
             <li><%= link_to "Home", departments_path %></li>
-            <li><%= link_to "New users", signup_path %></li>
-              <% if logged_in? %>
-              <li><%= link_to "All users", users_path %></li>
+            <% if logged_in? %>
+              <li><%= link_to "User", users_path %></li>
               <li class="dropdown">
                 <a href="#" onclick="loginLogout()" class="dropbtn">
                   Account <b class="caret"></b>
