--- a/app/views/departments/index.html.erb
+++ b/app/views/departments/index.html.erb
@@ -1,5 +1,5 @@
-<% provide(:title, 'HRMS') %>
 
-<h1>All Departments</h1>
 
+<%= render "departments/header" %>
+<br/>
 <%= render "departments/table" %>
