--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,5 +1,6 @@
-<% provide(:title, 'HRMS') %>
 
-<h1>Update</h1>
+<%= render "users/header" %>
 
-<%= render "users/form" %>
+<h2>Update</h2>
+
+<%= render "users/form",  update_password: false %>
