--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,5 +1,6 @@
-<% provide(:title, 'HRMS') %>
 
-<h1>Information</h1>
+<%= render "users/header" %>
+
+<h2>Information</h2>
 
 <%= render "users/detail" %>
