--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,13 +1,11 @@
-<% provide(:title, "HRMS") %>
+
 
 <div class="center jumbotron">
-  <h1>Welcome to the Sample App</h1>
+  <h1>Welcome to the HRMS</h1>
 
   <h2>
-    This is the home page for the
-    <a href="#">Ruby on Rails Tutorial</a>
-    sample application.
+    This is the home page 
   </h2>
 
-  <%= link_to "Sign up now!", signup_path, class: "btn btn-lg btn-primary" %>
+  <%= link_to "Sign in now!", login_path, class: "btn btn-lg btn-primary" %>
 </div>
