--- a/app/views/users/_detail.html.erb
+++ b/app/views/users/_detail.html.erb
@@ -21,7 +21,7 @@
         <div class="form-group row">
             <label for="staticEmail" class="col-sm-6 col-form-label">Department :</label>
             <div class="col-sm-6">
-                <%= (Department.find(@user.department_id)).description %>
+                <%= depart_infor(@user.department_id) %>
             </div>
         </div>
         <div class="form-group row">
