--- a/app/views/users/_table.html.erb
+++ b/app/views/users/_table.html.erb
@@ -12,17 +12,21 @@
   </thead>
   <tbody>
     <% @users.each.with_index(1) do |user, index| %>
-      <tr onclick="location.href='<%= user_path(user.id) %>'" class="hover-shadow" style="color:<% if !user.status %>gray<% end %>">
-          <th><%= params[:page]?index + 30*(params[:page].to_i-1):index %></th>
+      <tr onclick="location.href='<%= user_path(user.id) %>'" class="hover-shadow" style="<%= row_hover(user.status)%>">
+          <th><%= index_table(index) %></th>
           <td><%= user.name %></td>
           <td><%= user.email %></td>
           <td><%= user.phone %></td>
-          <td><%= (Department.find(user.department_id)).name %></td>
+          <td><%= depart_infor(user.department_id) %></td>
           <td>
-            <%= link_to "Update", edit_user_path(user.id) %>
+            <%= link_to "Update", edit_user_path(user.id), style: "float:left" %> 
+            <% if is_admin(current_user) %> 
+                 <%= form_tag(user, method: :delete, class: "custom-delete") do %>
+                  | <%= submit_tag 'Delete', data: { confirm: "Are you sure?" } %>
+                <% end %>
+            <% end %>
           </td>
       </tr>
     <% end %>
   </tbody>
 </table>
-
