--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -18,9 +18,6 @@
           <%= u.password_field :password_confirmation, class:"form-control" %>
         <% end %>
 
-        <%= u.label :department_id %>
-        <%= u.select :department_id, Department.all.collect {|dept| [dept.name, dept.id]}, prompt: "Choose one" %>
-
         <%= u.label :home_town %>
         <%= u.text_field :home_town, class: "form-control" %>
 
@@ -30,13 +27,20 @@
         <%= u.label :date_birth %>
         <%= u.date_field :date_birth, class: "form-control" %>
 
-        <%= u.label :position %>
-        <%= u.select :position, options_for_select([["staff", "staff"], ["intern", "intern"], ["admin", "admin"]], @user.position), prompt: "Choose one" %>
+        <% if is_admin(current_user) %>
 
-        <div class="form-check">
-            <%= u.check_box :status, class: "form-check-input" %> 
-            <label class="form-check-label" for="exampleCheck1">Precence</label>
-        </div>
+          <%= u.label :department_id %>
+          <%= u.select :department_id, Department.all.collect {|dept| [dept.name, dept.id]}, prompt: "Choose one" %>
+
+          <%= u.label :position %>
+          <%= u.select :position, options_for_select([["staff", "staff"], ["intern", "intern"], ["admin", "admin"]], @user.position), prompt: "Choose one" %>
+
+          <div class="form-check">
+              <%= u.check_box :status, class: "form-check-input" %> 
+              <label class="form-check-label" for="exampleCheck1">Precence</label>
+          </div>
+
+        <% end %>
 
       <%= u.submit "Save", class: "btn btn-primary" %>
     <% end %>
